--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "firebase": "^5.10.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
-    "react-native": "0.59.5"
+    "react-native": "0.59.5",
+    "react-redux": "^7.0.2",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
